set visible text on mobile mode, update fixtures to allow see long text behaviour. (#2136)
* set visible text on mobile mode, update fixtures to allow see long text behavior.

* Adding hyphen and word-break if there is a long word

* idem for qcm

* eslint

* fix test

--- a/packages/@coorpacademy-components/src/molecule/questions/qcm/style.css
+++ b/packages/@coorpacademy-components/src/molecule/questions/qcm/style.css
@@ -48,6 +48,10 @@
 .answerText {
   position: relative;
   color: cm_blue_900;
+  hyphens: auto;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
 }
 
 .selectedAnswer .answerText {
